--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Packing Buddy - Packing Checklist App</title>
+<title>PackSetGo - Packing Checklist App</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header>
-  <h1 aria-label="Packing Buddy">
+  <h1 aria-label="PackSetGo">
     <svg viewBox="0 0 64 64" aria-hidden="true" focusable="false" >
-      <path d="M40.9 11.5c.17 1.35-.1 2.7-.68 4.03a14.15 14.15 0 0 1-5.1 6.2c-3.47 2.51-7 5-10.5 7.5-3.3 2.3-5.03 6.1-7.1 9.2-1.39 2.2-3.1 4.27-3.8 6.84-.6 2.03-.14 4.17 1.1 5.93 1.9 2.75 6.7 3 9.33 1.5 5.33-3.5 9.73-11.86 12.99-18.67 1.74-4 10.58-18.8 6.8-19.3Z"/>
+      <rect x="16" y="16" width="32" height="40" rx="4" fill="#FFA500" stroke="#B55300" stroke-width="2"/>
+      <rect x="24" y="10" width="16" height="6" rx="2" fill="#FFA500" stroke="#B55300" stroke-width="2"/>
+      <line x1="24" y1="28" x2="24" y2="48" stroke="#B55300" stroke-width="2"/>
+      <line x1="40" y1="28" x2="40" y2="48" stroke="#B55300" stroke-width="2"/>
+      <circle cx="20" cy="58" r="2" fill="#444"/>
+      <circle cx="44" cy="58" r="2" fill="#444"/>
     </svg>
-    Packing Buddy
+    PackSetGo
   </h1>
   <nav aria-label="Main navigation" id="main-nav">
     <button id="nav-dashboard" aria-controls="dashboard-page" aria-selected="true" role="tab" style="display:none;">Dashboard</button>
@@ -124,14 +129,6 @@
       </div>
     </div>
 
-    <!-- Storage Debug Panel -->
-    <div id="storage-debug-panel" class="storage-debug-panel">
-      <div class="debug-panel-header">
-        <h4>Items</h4>
-      </div>
-      <div id="debug-panel-content" class="debug-panel-content"></div>
-    </div>
-
     <!-- Progress bar -->
     <div class="progress-text" id="progress-text" role="status">Packed: 0%</div>
     <div class="progress-container" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0">
@@ -178,9 +175,10 @@
   </section>
 </main>
 
-<!-- Airplane flying animation icon -->
-<svg id="airplane-fly" viewBox="0 0 64 64" aria-hidden="true" focusable="false">
-  <path d="M61.8 28.4 40.8 23l-2.4-5.6L28 20.2l-6.7-6.3L12 20l5.4 5.8-9.3-4.4L4.6 26l10.9 4.5-4 6.3-6.7-3-2.2 5.5 16 7.1 31.1-23.1z"/>
+<!-- Paper Plane flying animation icon -->
+<svg id="airplane-fly" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <path d="M2 32L62 2L32 62L28 36L2 32Z" fill="#E0E0E0" stroke="#333" stroke-width="2" stroke-linejoin="round"/>
+  <path d="M28 36L62 2" stroke="#999" stroke-width="2"/>
 </svg>
 
 <script src="script.js"></script>
