--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- Landing Page -->
   <section id="landing-page" role="region" aria-label="Landing page - sign in and sign up">
     <div id="landing-content">
-      <h2>Welcome to Packing Buddy</h2>
+      <h2>Welcome to PackSetGo</h2>
       <p>Organize your travel packing with ease and style. Your perfect travel companion!</p>
       <ul>
         <li>Track packing progress</li>
